# AgentLib

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: workflow.yml
agentlib/: __init__.py
agentlib/core/: __init__.py  agent.py  data_broker.py  datamodels.py  environment.py  errors.py  logging_.py  model.py  module.py
agentlib/models/: __init__.py  fmu_model.py  scipy_model.py
agentlib/modules/: __init__.py  simulator.py
agentlib/utils/: __init__.py  broker.py  communication_check.py  dependency_check.py  fuzzy_matching.py  load_config.py  local_broadcast_broker.py  local_broker.py  multi_agent_system.py  multi_processing_broker.py  plugin_import.py  validators.py
ci/: Dockerfile  clonemap.gitlab-ci.yml  docker_build.gitlab-ci.yml  run_examples.py
ci/agentlib/: Dockerfile
ci/clonemap/: Dockerfile
docs/: Makefile  index.html  requirements.txt
docs/images/: figures.drawio  model_handler.drawio  uml-diagrams.drawio
docs/source/: conf.py  installation.md
examples/: databroker_limits.py
tests/: Model.json  test_agent.py  test_agentlogger.py  test_communicator.py  test_data_broker.py  test_data_source.py  test_databroker_limits.py  test_datamodels.py  test_environment.py  test_examples.py  test_mas.py  test_model.py  test_module.py  test_n_pingpong.py  test_plugins.py  test_simulator.py  test_simulator_dashboard.py  test_utils.py
(+3081 files in other folders)
